--- a/public/index.html
+++ b/public/index.html
@@ -524,47 +524,36 @@
             <div class="container">
                 <!-- address -->
                 <div class="row">
-                    <div class="col-xl-3 col-sm-6 m-20px-tb">
+                    <div class="col-xl-4 col-sm-6 m-20px-tb">
                         <div class="feature-box-3 d-flex">
                             <div class="icon">
                                 <span class="icon-map-pin theme-color"></span>
                             </div>
                             <div class="feature-content">
-                                <h5 class="dark-color">Address</h5>
-                                <p>123 6th St. Melbourne,<br>FL 32904, USA</p>
+                                <h5 class="dark-color">Dirección</h5>
+                                <p>Francisco Javier Echeverria #1001A<br>Col: Industrila, Monterrey Nuevo León,CP: 64440</p>
                             </div>
                         </div>
                     </div>
-                    <div class="col-xl-3 col-sm-6 m-20px-tb">
+                    <div class="col-xl-4 col-sm-6 m-20px-tb">
                         <div class="feature-box-3 d-flex">
                             <div class="icon">
                                 <span class="icon-envelope theme-color"></span>
                             </div>
                             <div class="feature-content">
                                 <h5 class="dark-color">Email</h5>
-                                <p>info@yourdomain.com<br>sale@yourdomain.com</p>
+                                <p>construccionesypaileria@live.com.mx</p>
                             </div>
                         </div>
                     </div>
-                    <div class="col-xl-3 col-sm-6 m-20px-tb">
+                    <div class="col-xl-4 col-sm-6 m-20px-tb">
                         <div class="feature-box-3 d-flex">
                             <div class="icon">
                                 <span class="icon-mobile theme-color"></span>
                             </div>
                             <div class="feature-content">
-                                <h5 class="dark-color">Phone</h5>
-                                <p>Mob: +01 000 000 000<br>Fax: +01 000 000 000</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xl-3 col-sm-6 m-20px-tb">
-                        <div class="feature-box-3 d-flex">
-                            <div class="icon">
-                                <span class="icon-clock theme-color"></span>
-                            </div>
-                            <div class="feature-content">
-                                <h5 class="dark-color">Working Hr</h5>
-                                <p>Monday to Friday<br> (9:00 to 18:00)</p>
+                                <h5 class="dark-color">Teléfono</h5>
+                                <p>Local: 81 2235 3316<br>Local 2: 81 2261 1414<br>Movil: 81 8168 1063</p>
                             </div>
                         </div>
                     </div>
