--- a/public/index.html
+++ b/public/index.html
@@ -66,7 +66,7 @@
         <!-- Main -->
         <main>
             <!-- Home Banner -->
-            <section id="home" class="home-banner bg-center" style="background-image: url(static/img/acerp-trabajo.jpg);">
+            <section id="home" class="home-banner bg-center " style="background-image: url(static/img/acerp-trabajo.jpg);">
                 <div class="container">
                     <div class="row full-screen align-items-center justify-content-center">
                         <div class="col-lg-12 text-center">
@@ -128,6 +128,91 @@
                 </div>
             </section>
             <!-- Feature Box -->
+
+
+            <!-- Cotizar -->
+            <section class="section dark-bg">
+                <div class="container">
+                    <div class="row justify-content-center">
+                        <div class="col-lg-8" style="margin: 24px">
+                            <div class="section-title text-center">
+                                <h2 class="white-color font-alt">Nuestros servicios:</h2>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-6">
+                           <ul>
+                               <li class="special">
+                                   <p class="list-item">
+                                   Instalaciones Eléctricas Alta y Baja tensión
+                                   </p>
+                               </li>
+                               <li class="special">
+                                   <p class="list-item">
+                                   Personal por administración
+                                   </p>
+                               </li>
+                               <li class="special">
+                                   <p class="list-item">
+                                   Fabricación y montaje de estructuras
+                                   </p>
+                               </li>
+                               <li class="special">
+                                   <p class="list-item">
+                                   Fabricación de tanques acero al carbón y acero inoxidable
+                                   </p>
+                               </li>
+                               <li class="special">
+                                   <p class="list-item">
+                                   Aplicación de pintura en general industrial
+                                   </p>
+                               </li>
+                               <li class="special">
+                                   <p class="list-item">
+                                   Instalación de tuberías acero al carbón e inoxidable y CPVC
+                                   </p>
+                               </li>
+                               <li class="special">
+                                   <p class="list-item">
+                                   Instalaciones Eléctricas Alta y Baja tensión
+                                   </p>
+                               </li>
+                               <li class="special">
+                                   <p class="list-item">
+                                   Mantenimiento y limpiezas de áreas verdes, riego por aspersión
+                                   </p>
+                               </li>
+                               <li class="special">
+                                   <p class="list-item">
+                                   Construcciones de Puentes
+                                   </p>
+                               </li>
+                               <li class="special">
+                                   <p class="list-item">
+                                   Construcción y Obra civil en general
+                                   </p>
+                               </li>
+                               <li class="special">
+                                   <p class="list-item">
+                                   Obra estructural
+                                   </p>
+                               </li>
+                               <li class="special">
+                                   <p class="list-item">
+                                   Obra electromecánica
+                                   </p>
+                               </li>
+                           </ul>
+                            </div>
+                            <div class="col-lg-6  justify-content-center bg-center   text-center align-items-center">
+                                <img src="static/img/photos/21-100.jpg" width="400"  >
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- End Cotizar -->
+
 
             <!-- Work -->
             <section class="section p-0px-b" id="Proyectos">
@@ -431,6 +516,32 @@
                                 </div>
                             </div>
                         </div> <!-- grid item -->
+                        <div class="grid-item general">
+                            <div class="portfolio-box-01">
+                                <div class="portfolio-img">
+                                    <img src="static/img/photos/30.png" title="" alt="">
+                                </div>
+                                <div class="portfolio-info">
+                                    <a href="static/img/photos/30.png" class="gallery-link">
+                                        <i></i>
+                                    </a>
+                                    <!-- h5><a href="#">Our Photography</a></h5 -->
+                                </div>
+                            </div>
+                        </div> <!-- grid item -->
+                        <div class="grid-item general">
+                            <div class="portfolio-box-01">
+                                <div class="portfolio-img">
+                                    <img src="static/img/photos/31.png" title="" alt="">
+                                </div>
+                                <div class="portfolio-info">
+                                    <a href="static/img/photos/31.png" class="gallery-link">
+                                        <i></i>
+                                    </a>
+                                    <!-- h5><a href="#">Our Photography</a></h5 -->
+                                </div>
+                            </div>
+                        </div> <!-- grid item -->
                     </div> <!-- portfolio-content -->
                 </div>
             </section>
@@ -438,7 +549,7 @@
 
 
 
-            <!-- Subscribe -->
+            <!-- Cotizar -->
             <section class="section dark-bg">
                 <div class="container">
                     <div class="row justify-content-center">
@@ -447,20 +558,22 @@
                                 <div class="p-30px-t">
                            <img src="static/img/daza-logo-figura.png" title="" width="150">
                        </div>
-                                <h2 class="white-color font-alt">Want to start project with us?</h2>
-                                <p class="m-0px large">Hello, I’m a UI/UX Designer &amp; Frontend,Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.</p>
+                                <h2 class="white-color font-alt">¿Te gustaría cotizar?</h2>
+                                <p class="m-0px large">Haz click en el siguiente botón y contáctanos por <b>Whatsapp</b></p>
                                 <div class="p-25px-t">
-                                    <a class="m-btn m-btn-radius m-btn-t-white" href="#">Get A Quote</a>
+                                    <a class="m-btn m-btn-radius m-btn-t-white" href="https://wa.link/zk2n0r">Escribir por Whatsapp</a>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </section>
-            <!-- End Subscribe -->
+            <!-- End Cotizar -->
 
         </main>
         <!-- main end -->
+
+
         <!-- about -->
         <section class="section" id="Clientes">
             <div class="container">
@@ -542,7 +655,16 @@
                             </div>
                             <div class="feature-content">
                                 <h5 class="dark-color">Email</h5>
-                                <p>construccionesypaileria@live.com.mx</p>
+                                <p>
+                                    <a  href = "mailto:paileriaindustrialdaza1@outlook.es?subject = Mensaje desde Página Web Daza">
+                                        paileriaindustrialdaza1@outlook.es
+                                    </a>
+                                </p>
+                                <p>
+                                    <a  href = "mailto:paileriadaza@outlook.es?subject = Mensaje desde Página Web Daza">
+                                        paileriadaza@outlook.es
+                                    </a>
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -553,7 +675,12 @@
                             </div>
                             <div class="feature-content">
                                 <h5 class="dark-color">Teléfono</h5>
-                                <p>Local: 81 2235 3316<br>Local 2: 81 2261 1414<br>Movil: 81 8168 1063</p>
+                                <p>
+                                    <a href="tel:8122353316">Local: 81 2235 3316</a><br>
+                                    <a href="tel:8122611414">Local 2: 81 2261 1414</a><br>
+                                    <a href="tel:8181681063">Movil: 81 8168 1063</a><br>
+                                    <a href="tel:8114952651">Movil 2: 81 1495 2651</a>
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -561,25 +688,36 @@
                 <!-- end address -->
             </div>
         </section>
+
+        <style>
+            .special {
+                color: white;
+            }
+            ul {
+                margin: 0.75em 0;
+                padding: 0 0;
+                list-style: none;
+            }
+            .special :before {
+                content: "";
+                border-color: transparent #fff;
+                border-style: solid;
+                border-width: 0.65em 0 0.65em 0.75em;
+                display: block;
+                height: 0;
+                width: 0;
+                left: -1em;
+                top: 1.4em;
+                position: relative;
+            }
+        </style>
         <!-- Footer-->
         <footer class="footer footer-dark" id="Contacto">
 
             <!-- footer top -->
             <div class="footer-bottom">
                 <div class="container">
-                    <div class="row">
-                        <div class="col-md-6 text-center text-md-left">
-                            <p>© 2019 copyright all right reserved</p>
-                        </div>
-                        <div class="col-md-6 text-center">
-                            <ul class="nav justify-content-center justify-content-md-end">
-                                <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                                <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                                <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-                            </ul>
-                        </div>
-                    </div>
+
                 </div>
             </div>
             <!-- /footer bottom -->
