cambios en daza

--- a/public/index.html
+++ b/public/index.html
@@ -87,12 +87,16 @@
                         <div class="col-md-12 col-lg-8">
                             <div class="section-title text-center">
                                 <h2 class="dark-color font-alt">Sobre Nosotros</h2>
+                                <b>
+                                    Daza Palería Industrial. S.A. de C.V.
+                                </b>
                                 <p class="m-0px large">
                                     Somos una empresa joven 100% mexicana, fundada y establecida en Monterrey, Nuevo León.
                                     Integrada para resolver las necesidades crecientes de la industria
                                     ,en el área del acero inoxidable y obra civil,
                                     contando con expertos en la fabricación y construcción con más de 15 años de experiencia.
                                 </p>
+
                             </div>
                         </div>
                     </div>
@@ -643,9 +647,15 @@
                                 <span class="icon-map-pin theme-color"></span>
                             </div>
                             <div class="feature-content">
-                                <h5 class="dark-color">Dirección</h5>
+                                <h5 class="dark-color">Dirección Monterrey</h5>
                                 <p>Francisco Javier Echeverria #1001A<br>Col: Industrila, Monterrey Nuevo León,CP: 64440</p>
+                                <h5 class="dark-color">Oficina Baja California</h5>
+                                <p>
+                                    Sinaloa 84, Braulio Maldonado, Tecate Tecate, Baja California, CP: 21480
+                                </p>
+
                             </div>
+
                         </div>
                     </div>
                     <div class="col-xl-4 col-sm-6 m-20px-tb">
@@ -674,13 +684,20 @@
                                 <span class="icon-mobile theme-color"></span>
                             </div>
                             <div class="feature-content">
-                                <h5 class="dark-color">Teléfono</h5>
+                                <h5 class="dark-color">Teléfono Monterrey</h5>
                                 <p>
                                     <a href="tel:8122353316">Local: 81 2235 3316</a><br>
                                     <a href="tel:8122611414">Local 2: 81 2261 1414</a><br>
                                     <a href="tel:8181681063">Movil: 81 8168 1063</a><br>
                                     <a href="tel:8114952651">Movil 2: 81 1495 2651</a>
+                                    <a href="tel:8114952651">Movil 2: 81 1495 2651</a>
+
+
                                 </p>
+                                <h5 class="dark-color">Teléfono Baja California</h5>
+                                <a href="tel:6651272345">Teléfono: 66 5127 2345</a><br>
+
+
                             </div>
                         </div>
                     </div>
@@ -717,7 +734,7 @@
             <!-- footer top -->
             <div class="footer-bottom">
                 <div class="container">
-
+                    Daza Palería Industrial. S.A. de C.V.
                 </div>
             </div>
             <!-- /footer bottom -->
